# ac-server-manager-1

./: .gitignore  .implementation-complete  ARCHITECTURE.md  CHANGELOG.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  PR_SUMMARY.md  README.md  VERIFICATION.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
ac_server_manager/: __init__.py  cli.py  config.py  deployer.py  ec2.py  s3.py
docs/: ASSETTOSERVER.md  ASSETTOSERVER_INTEGRATION.md  CONTENT_DOWNLOADS.md  README_FULL.md
scripts/: README.md  ac-server.service  cloud-init-user-data.sh  ssh-check.sh  start-ac-server.sh
src/ac_server_manager/: cli.py  config.py  deployer.py  ec2_manager.py  iam_manager.py  pack_utils.py  s3_manager.py
src/ac_server_manager/user_data_templates/: full_installer.sh  s3_bootstrap.sh
tests/: __init__.py  conftest.py  test_assetto_server_prepare.py  test_assettoserver_deployment.py  test_check_assettoserver.sh  test_cli.py  test_config.py  test_deployer.py  test_ec2.py  test_ec2_manager.py  test_iam_manager.py  test_pack_utils.py  test_s3.py  test_s3_manager.py  test_user_data_limits.py  test_validation_script.py
tools/: README.md  assetto_server_prepare.py  check_assettoserver_instance.sh
